fix: use legacy flag to fix ci pipeline

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         cache: 'npm'
 
     - name: Instalar dependências
-      run: npm ci
+      run: npm ci --legacy-peer-deps
 
     - name: Construir
       run: npm run build
