--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "my-v0-project",
+  "name": "biblioteca-canticorum",
+  "homepage": "https://manel1874.github.io/biblioteca-canticorum",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -46,13 +47,15 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "express": "^5.1.0",
+    "gh-pages": "^6.3.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
-    "react": "^19",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react": "^18.1.0",
+    "react-day-picker": "^9.7.0",
+    "react-dom": "^18.1.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
@@ -64,8 +67,8 @@
   },
   "devDependencies": {
     "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.1.0",
+    "@types/react-dom": "^18.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
